--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-alohaaaaaaaaaaa~~~~~
+<html>
+<head>
+<title>
+ <font size="5">
+  <font color="#64A600">
+   <b>
+   Web Design Class  
+   </b>
+   I am JOE~
+  </font>
+ </font>
+</title>
+</head>
+<body>
+<img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.0-9/1098213_697940103566017_15808220_n.jpg?oh=92e890c5b96286457e399ca9cf3fd848&oe=5878CE4A">
+</body>
+</html>
