--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <html>
 <head>
-<title>
- <font size="5">
-  <font color="#64A600">
-   <b>
-   Web Design Class  
-   </b>
-   I am JOE~
-  </font>
- </font>
-</title>
+<title>web design</title>
 </head>
-<body>
-<img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.0-9/1098213_697940103566017_15808220_n.jpg?oh=92e890c5b96286457e399ca9cf3fd848&oe=5878CE4A">
+<body background="http://i.imgur.com/2jHawIH.jpg"bgproperties=fixed>
+<font size="5">
+<font color="#64A600">
+<b>
+Web Design Class<br>
+</b>
+</font>
+<font color=#EAC100>Hello!!<br>
+我是電機108的張喬寓<br>
+<a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#E
+</font>
+</font>
+<img src="http://i.imgur.com/YbLuTRo.jpg">
 </body>
 </html>
+
+
