--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <font size="5">
 <font color="#64A600">
 <b>
-Web Design Class<br>
+<center>Web Design Class</center><br>
 </b>
 </font>
 <font color=#EAC100>Hello!!<br>
-我是電機108的張喬寓<br>
+<center>我是電機108的張喬寓</center><br>
 <a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#E
 </font>
 </font>
-<img src="http://i.imgur.com/YbLuTRo.jpg">
+<center><img src="http://i.imgur.com/YbLuTRo.jpg"></center>
 </body>
 </html>
 
