--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <center>Web Design Class</center><br>
 </b>
 </font>
-<font color=#EAC100>Hello!!<br>
+<font color=#EAC100><center>Hello!!</center><br>
 <center>我是電機108的張喬寓</center><br>
 <a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#E
 </font>
