--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </font>
 <font color=#EAC100><center>Hello!!</center><br>
 <center>我是電機108的張喬寓</center><br>
-<a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#E
+<a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#FF5151>My Facebook!!</font></a>
 </font>
 </font>
 <center><img src="http://i.imgur.com/YbLuTRo.jpg"></center>
