--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="style.css">
 <title>web design</title>
 </head>
-<body background="http://i.imgur.com/2jHawIH.jpg"bgproperties=fixed>
-<font size="5">
-<font color="#64A600">
-<b>
-<center>Web Design Class</center><br>
-</b>
-</font>
-<font color=#EAC100><center>Hello!!</center><br>
-<center>我是電機108的張喬寓</center><br>
-<a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#FF5151>My Facebook!!</font></a>
-</font>
-</font>
-<center><img src="http://i.imgur.com/YbLuTRo.jpg"></center>
+<body>
+<marquee bgcolor=#DCB5FF>Welcome!!!!</marquee>
+<center>
+<h1>Web Design</h1>
+</center>
+Joe's web page<br>
+EE 108<br>
+<a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#FF2D2D>My Facebook!!</font></a>
+<img src="http://i.imgur.com/YbLuTRo.jpg">
+<h2>
+哈囉~歡迎光臨!!<br>
+我是電機二甲的張喬<br>
+興趣是聽音樂看小說騎腳踏車亂晃玩玩我的EII<br>
+Nice to meet U~<br>
+</h2>
 </body>
 </html>
 
