--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ EE 108<br>
 哈囉~歡迎光臨!!<br>
 我是電機二甲的張喬<br>
 興趣是聽音樂看小說騎腳踏車亂晃玩玩我的EII<br>
+<span style="font-family:Microsoft JhengHei;">微軟正黑體</span>
 Nice to meet U~<br>
 </h2>
 </body>
