--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>web design</title>
+<script>
+window.alert("歡迎光臨的唷!!");
+window.alert("How are you today!!");
+</script>
 </head>
 <body>
 <marquee bgcolor=#DCB5FF>Welcome!!!!</marquee>
