--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@ window.alert("How are you today!!");
 <center>
 <h1>Web Design</h1>
 </center>
+張喬的網路空間<br>
 Joe's web page<br>
-EE 108<br>
-<a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#FF2D2D>My Facebook!!</font></a>
+成大電機工程學系108<br>
+NCKU EE 108<br>
+<a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#8E8E8E>My Facebook!!</font></a>
 <img src="http://i.imgur.com/YbLuTRo.jpg">
 <h2>
 哈囉~歡迎光臨!!<br>
