--- a/index.html
+++ b/index.html
@@ -1,30 +1,50 @@
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<title>web design</title>
-<script>
-window.alert("歡迎光臨的唷!!");
-window.alert("How are you today!!");
-</script>
-</head>
-<body>
-<marquee bgcolor=#DCB5FF>Welcome!!!!</marquee>
-<center>
-<h1>Web Design</h1>
-</center>
-張喬的網路空間<br>
-Joe's web page<br>
-成大電機工程學系108<br>
-NCKU EE 108<br>
-<a href="https://www.facebook.com/profile.php?id=100000501011272"><font color=#8E8E8E>My Facebook!!</font></a>
-<img src="http://i.imgur.com/YbLuTRo.jpg">
-<h2>
-哈囉~歡迎光臨!!<br>
-我是電機二甲的張喬<br>
-興趣是聽音樂看小說騎腳踏車亂晃玩玩我的EII<br>
-Nice to meet U~<br>
-</h2>
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>web design</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="jquery-3.1.1.min.js"></script>
+		<script>
+			$(document).ready(function(){
+				$("h3").click(function(){
+				$("h2").fadeToggle();
+				});
+			});
+			$(document).ready(function(){
+				$("h4").click(function(){
+				$("p").fadeToggle();
+				});
+			});
+			
+		</script>
+		
+	</head>
+	<body>
+		<marquee bgcolor=#DCB5FF>Welcome!!!!</marquee>
+		<center>
+			<h1>Web Design</h1>
+		</center>
+			張喬的網路空間<br>
+			Joe's web page<br>
+			<br>
+			成大電機工程學系108<br>
+			NCKU EE 108
+			<h3>About me</h3>
+			<h2>
+			哈囉~歡迎光臨!!<br>
+			我是電機二甲的張喬<br>
+			興趣是聽音樂看小說騎腳踏車亂晃玩玩我的EII<br>
+			Nice to meet U~<br>
+			</h2>
+			<h4>My picture</h4>
+			<p><img src="http://i.imgur.com/YbLuTRo.jpg"></p> 
+			
+		<a href="https://www.facebook.com/profile.php?id=100000501011272">
+			<font color=#8E8E8E>My Facebook!!</font>
+		</a>
+		
+				
+	</body>
 </html>
 
 
