--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<p><img src="http://i.imgur.com/YbLuTRo.jpg"></p> 
 			
 		<a href="https://www.facebook.com/profile.php?id=100000501011272">
-			<font color=#8E8E8E>My Facebook!!</font>
+			<font color=#4F9D9D>My Facebook!!</font>
 		</a>
 		
 				
