change some context about my guitar

--- a/index.html
+++ b/index.html
@@ -95,10 +95,13 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/halloweenpic.jpg" alt="" /></a>
+								<a class="image fit"><img src="images/guitar.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>title</h3>
-									<p>content</p>
+									<h3>This is my lovely guitar!</h3>
+									<p>我的興趣之一就是玩玩樂器<br>
+                  做一些COVER之類的<br>
+                  有興趣可以交流一下喔~<br>
+                  </p>
 									<a href="https://youtu.be/-fxezpR7WE0" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
