change some font style

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<a class="image fit"><img src="images/guitar.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>This is my lovely guitar!</h3>
-									<p>我的興趣之一就是玩玩樂器<br>
+									<p id="guitar">我的興趣之一就是玩玩樂器<br>
                   做一些COVER之類的<br>
                   有興趣可以交流一下喔~<br>
                   </p>
